# moderngpu

./: CMakeLists.txt
demo/: CMakeLists.txt  demo.cu
include/: moderngpu.cuh
include/kernels/: csrtools.cuh  segreducecsr.cuh
include/util/: mgpucontext.h
src/: mgpucontext.cu
